--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,17 +4,17 @@
   width: 100vw;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.171), rgba(0, 0, 0, 0.822), black), url('../../images/owl-face.jpg') no-repeat;
   background-size: cover;
-  transition: linear 0.3s;
+  transition: ease-out 0.3s;
   opacity: 1;
   position: absolute;
   right: 0;
 }
 
-.navClosed {
+.closed {
   height: 100vh;
+  overflow: hidden;
   width: 0vw;
-  transition: linear 0.3s;
-
+  transition: ease-in 0.3s;
 }
 
 #hamMenu {
@@ -59,20 +59,24 @@
   top: 49%;
 }
 
-@keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
+.menuItems {
+  list-style: none;
+  color: whitesmoke;
+  text-align: right;
+  font-size: 80px;
+  opacity: 1;
+  transition: ease-out 0.5s;
+  margin-right: 5vw;
+  margin-top: 10vw;
+  line-height: 1.7;
 }
 
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.closedMenu {
+  opacity: 0;
+  /* transition: ease-in 0.3s; */
+}
+
+.menuItems > a, a:visited {
+  text-decoration: none;
+  color: inherit;
 }
