--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,7 +2,7 @@
 .nav {
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.171), rgba(0, 0, 0, 0.822), black), url('../../images/owl-face.jpg') no-repeat;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.171), rgba(0, 0, 0, 0.918), black), url('../../images/owl-face.jpg') no-repeat;
   background-size: cover;
   transition: ease-out 0.3s;
   opacity: 1;
@@ -18,20 +18,24 @@
 }
 
 #hamMenu {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   box-sizing: border-box;
-  width: 30px;
+  width: 35px;
   height: 35px;
   position: fixed;
   right: 5vw;
   top: 5vh;
   cursor: pointer;
   opacity: 1;
+
 }
 
 .line {
   position: absolute;
   height: 4px;
-  width: 100%;
+  width: 90%;
   background: whitesmoke;
   transition: all cubic-bezier(0.25, 0.1, 0.28, 1) 0.4s;
 }
