--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,13 +1,42 @@
 
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.contact > p {
+  font-size: 50px;
+  margin: 0;
+}
+
+.contactWrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  height: 450px;
+  max-width: 740px;
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.message {
+  width: 100%;
+}
+
 .sendButton {
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
   cursor: pointer;
-  width: 25%;
+  width: 75%;
+  max-width: 300px;
   height: 50px;
-  font-size: 30px;
+  font-size: 25px;
   margin: auto;
   margin-top: 50px;
 }
@@ -15,4 +44,24 @@
 .sendButton:hover {
   background: rgb(124, 124, 124);
   color: white;
+}
+
+/* for phone only */
+@media (max-width: 599px) {
+
+}
+
+/* for tablet portrait up  */
+@media (min-width: 600px) {
+
+}
+
+/* for tablet landscape up  */
+@media (min-width: 900px) {
+
+}
+
+/* for desktop up  */
+@media (min-width: 1200px) {
+
 }
