--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -85,7 +85,7 @@
   color: inherit;
 }
 
-@media (max-width: 500px){
+@media (max-width: 599px){
   .nav {
     background: black;
   }
@@ -97,11 +97,10 @@
     margin-top: 15vh;
     line-height: 2;
     margin-right: 10vw;
-    
   }
 }
 
-@media (min-width: 501px) and (max-width: 900px){
+@media (min-width: 600px){
   .nav {
     background: black;
   }
@@ -110,14 +109,16 @@
   }
   .menuItems {
     margin-top: 15vh;
-    font-size: 80px;
+    font-size: 60px;
     margin-right: 8vw;
   }
 }
 
-@media (min-width: 901px) and (max-width: 1199px){
+@media (min-width: 900px){
   .nav {
-    background: black;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.171), rgba(0, 0, 0, 0.918), black), url('../../images/owl-face.jpg') no-repeat;
+    background-size: cover;
+
   }
   .menuItems {
     margin-top: 15vh;
